wip map, wip barcolors

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -21,7 +21,7 @@
     "opt0": "CCS",
     "opt1": "BIO",
     "scenario-difference": "Scenario Difference",
-    "red-minus-green": "This function will calculate the difference in value between the blue and violet model results.",
+    "red-minus-green": "This function will calculate the difference in value between the blue and orange model results.",
     "tokni": "Tokni",
     "developed-by": "Implemented by",
     "disclaimer": "This website was created and maintained with the financial support of the European Union. Its contents are the sole responsibility of Equinoccio and Niras and do not necessarily reflect the views of the European Union",
