scenario description is not shouting, adds choose regions, add a few translations

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -26,7 +26,7 @@
     "developed-by": "Implemented by",
     "disclaimer": "This website was created and maintained with the financial support of the European Union. Its contents are the sole responsibility of Equinoccio and Niras and do not necessarily reflect the views of the European Union",
     "funded_by": "Funded by the European Union",
-    "countries": "Choose Countries",
+    "countries": "Choose Regions",
     "change-language": "Change Language",
     "change-unit": "Change Unit",
     "citation-title": "When using the results presented in the result viewer use the following citation:",
